objects/ICC_Formula_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Base_Object__c</fullName>
        <label>Base Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_To_Replace__c</fullName>
        <label>Field To Replace</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacing_Field_Name__c</fullName>
        <label>Replacing Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ICC Formula Field Mapping</label>
</CustomObject>